Link-duplicating proxy loses proxy #39033

Closed
opened 2014-03-08 02:04:36 +01:00 by Marianne Gagnon · 11 comments

System Information
This was reproduced on both windows 7 and ubuntu linux

Blender Version
Broken: 2.70 RC1
Worked: 2.69

Short description of error
When you link-duplicate a proxy to a linked library object, the duplicated object no longer is a proxy

Exact steps for others to reproduce the error
Link an object from another .blend file.
Create a proxy out of it.
Link-duplicate the proxy
The duplicated object was correctly a proxy in blender 2.69, but in blender 2.70 RC1 it seems to be a duplicate that is no longer actually a proxy, only a multi-user mesh.

**System Information** This was reproduced on both windows 7 and ubuntu linux **Blender Version** Broken: 2.70 RC1 Worked: 2.69 **Short description of error** When you link-duplicate a proxy to a linked library object, the duplicated object no longer is a proxy **Exact steps for others to reproduce the error** Link an object from another .blend file. Create a proxy out of it. Link-duplicate the proxy The duplicated object was correctly a proxy in blender 2.69, but in blender 2.70 RC1 it seems to be a duplicate that is no longer actually a proxy, only a multi-user mesh.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @auria

Added subscriber: @auria

#39061 was marked as duplicate of this issue

#39061 was marked as duplicate of this issue

Note, this only happens when opening blends created in previous blender versions.

I have attached a minimal sample. Open "lib_user.blend" and alt-duplicate either "weirdshape_proxy" objects

TestCasev2.zip

Note, this only happens when opening blends created in previous blender versions. I have attached a minimal sample. Open "lib_user.blend" and alt-duplicate either "weirdshape_proxy" objects [TestCasev2.zip](https://archive.blender.org/developer/F80252/TestCasev2.zip)

Added subscriber: @samuncle

Added subscriber: @samuncle

Added subscriber: @ZauberParacelsus

Added subscriber: @ZauberParacelsus

◀ Merged tasks: #39061.

◀ Merged tasks: #39061.

This issue was referenced by blender/blender-addons-contrib@c2045ef794

This issue was referenced by blender/blender-addons-contrib@c2045ef794a054edbe6be18db51eadf4b268111d

This issue was referenced by c2045ef794

This issue was referenced by c2045ef794a054edbe6be18db51eadf4b268111d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c2045ef794.

Closed by commit c2045ef794.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39033
No description provided.