Fix T39033: Regression, duplicating proxy loses proxy

fix for bug making duplicates real effected copying scenes and linked duplis.